--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "mythos",
+  "name": "my-croquet-microverse-world",
   "version": "1.0.0",
-  "description": "A Mythical World in Croquet Microverse",
+  "description": "A World in Croquet Microverse",
   "scripts": {
     "start": "npm-run-all --parallel file-server watch-server",
     "file-server": "file-server --port 9684",
     "watch-server": "watch-server"
   },
   "dependencies": {
-    "@croquet/microverse-library": "^0.4.9"
+    "@croquet/microverse-library": "0.4.6"
   },
   "devDependencies": {
-    "@croquet/microverse-file-server": "^1.0.6",
+    "npm-run-all": "^4.1.5",
     "@croquet/microverse-watch-server": "^1.0.6",
-    "npm-run-all": "^4.1.5"
+    "@croquet/microverse-file-server": "^1.0.7"
   }
 }
